@@ -5,7 +5,7 @@ note
 		"Eiffel decorated Abstract Syntax Tree factories"
 
 	library: "Gobo Eiffel Tools Library"
-	copyright: "Copyright (c) 2002-2010, Eric Bezault and others"
+	copyright: "Copyright (c) 2002-2011, Eric Bezault and others"
 	license: "MIT License"
 	date: "$Date$"
 	revision: "$Revision$"
@@ -171,6 +171,7 @@ inherit
 			new_assignment,
 			new_assignment_attempt,
 			new_attribute,
+			new_attribute_compound,
 			new_bang_instruction,
 			new_bit_feature,
 			new_bit_n,
@@ -1780,6 +1781,19 @@ feature -- AST nodes
 			end
 		end
 
+	new_attribute_compound (a_attribute: ET_KEYWORD; a_compound: ET_COMPOUND): ET_COMPOUND
+			-- New compound preceded by a 'attribute' keyword
+		do
+			if a_compound /= Void then
+				if a_attribute /= Void then
+					a_compound.set_keyword (a_attribute)
+				else
+					a_compound.set_keyword (tokens.attribute_keyword)
+				end
+				Result := a_compound
+			end
+		end
+
 	new_bang_instruction (l: ET_SYMBOL; a_type: ET_TYPE; r: ET_SYMBOL; a_target: ET_WRITABLE; a_call: ET_QUALIFIED_CALL): ET_BANG_INSTRUCTION
 			-- New bang creation instruction
 		do
@@ -2360,10 +2374,10 @@ feature -- AST nodes
 
 	new_extended_attribute (a_name: ET_EXTENDED_FEATURE_NAME;
 		a_type: ET_DECLARED_TYPE; an_assigner: ET_ASSIGNER; a_first_indexing: ET_INDEXING_LIST;
-		an_obsolete: ET_OBSOLETE; a_preconditions: ET_PRECONDITIONS; a_attribute: ET_KEYWORD;
-		a_postconditions: ET_POSTCONDITIONS; an_end: ET_KEYWORD;
-		a_semicolon: ET_SEMICOLON_SYMBOL; a_clients: ET_CLIENT_LIST;
-		a_feature_clause: ET_FEATURE_CLAUSE; a_class: ET_CLASS): ET_EXTENDED_ATTRIBUTE
+		an_obsolete: ET_OBSOLETE; a_preconditions: ET_PRECONDITIONS; a_locals: ET_LOCAL_VARIABLE_LIST;
+		a_compound: ET_COMPOUND; a_postconditions: ET_POSTCONDITIONS;
+		a_rescue_clause: ET_COMPOUND; an_end: ET_KEYWORD; a_semicolon: ET_SEMICOLON_SYMBOL;
+		a_clients: ET_CLIENT_LIST; a_feature_clause: ET_FEATURE_CLAUSE; a_class: ET_CLASS): ET_EXTENDED_ATTRIBUTE
 			-- New extended attribute declaration
 		do
 			if a_name /= Void and a_type /= Void and a_clients /= Void and a_class /= Void then
@@ -2371,12 +2385,12 @@ feature -- AST nodes
 				Result.set_assigner (an_assigner)
 				Result.set_obsolete_message (an_obsolete)
 				Result.set_preconditions (a_preconditions)
+				Result.set_locals (a_locals)
+				Result.set_compound (a_compound)
 				Result.set_postconditions (a_postconditions)
+				Result.set_rescue_clause (a_rescue_clause)
 				Result.set_clients (a_clients)
 				Result.set_first_indexing (a_first_indexing)
-				if a_attribute /= Void then
-					Result.set_attribute_keyword (a_attribute)
-				end
 				if an_end /= Void then
 					Result.set_end_keyword (an_end)
 				end
